--- a/index.html
+++ b/index.html
@@ -364,6 +364,7 @@
 <body class="" style="visibility: hidden;">
 
 <section id="top_sect" class="second">
+    <input type="text" placeholder="𐎾𐎴𐏐𐎩𐎠𐏐𐎲𐎡𐎵𐎡𐎺𐎿𐏐" id="regular_field" />
     <button id="main_btn" onclick="DemoApp.sendMessage('');">Send «Dorood, World!»</button>
     <button id="with_webview_btn" onclick="DemoApp.sendMessage('', true);">Send «Dorood, World!» with inline webview button</button>
     <button id="data_btn" onclick="DemoApp.sendTime(true);">Send current time to bot (x10)</button>
@@ -372,7 +373,7 @@
     <button onclick="DemoApp.toggleSettingsButton(this);">Show Settings Button</button>
     <button onclick="DemoApp.toggleMainButton(this);">Hide Main Button</button>
     <button onclick="DemoApp.toggleSwipeBehavior(this);">Disable Vertical Swypes</button>
-    <input type="text" placeholder="Input text in regular input..." id="regular_field" />
+    
     <div
         class="input"
         contenteditable="true"
