--- a/index.html
+++ b/index.html
@@ -614,7 +614,7 @@
             }).onClick(DemoApp.close);
 
             Telegram.WebApp.SecondaryButton.setParams({
-                text: 'Do Something',
+                text: 'Open Keyboard',
                 is_visible: true
             }).onClick(DemoApp.moveSecondaryButton);
 
